--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,156 +1,135 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/primary"
-    tools:context=".LoginActivity"
-    android:weightSum="7"
-    android:orientation="vertical"
-    tools:ignore="MergeRootFrame">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:background="@color/primary"
+              tools:context=".LoginActivity"
+              android:weightSum="7"
+              android:orientation="vertical"
+              tools:ignore="MergeRootFrame">
 
 
     <LinearLayout
-        android:id="@+id/imageViewContainer"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:gravity="center_horizontal">
+            android:id="@+id/imageViewContainer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:gravity="center_horizontal">
 
         <ImageView
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView"
-            android:contentDescription="@string/linku_logo"
-            android:src="@drawable/linku_logo_white"
-            android:layout_gravity="bottom" />
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:contentDescription="@string/linku_logo"
+                android:src="@drawable/linku_logo_white"
+                android:layout_gravity="bottom" />
 
     </LinearLayout>
 
 
     <LinearLayout
-        style="@style/LoginFormContainer"
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:weightSum="4">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"
-            android:clickable="true"
-            android:layout_gravity="top"
-            android:layout_marginTop="@dimen/vertical_36dp">
-
-            <EditText
-                android:id="@+id/username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_username"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textColorHint="@color/hint"
-                android:textSize="@dimen/hint" />
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:imeActionId="@+id/edittext_action_login"
-                android:imeActionLabel="@string/login"
-                android:textColor="@android:color/white"
-                android:textColorHint="@color/hint"
-                android:textSize="@dimen/hint"
-                android:layout_marginTop="@dimen/login_form_margin" />
-
-            <Button
-                android:id="@+id/login_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/login"
-                style="?android:attr/borderlessButtonStyle"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
-                android:textColor="@android:color/white"
-                android:layout_gravity="right"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp" />
-        </LinearLayout>
-
-        <LinearLayout
+            style="@style/LoginFormContainer"
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom">
+            android:layout_weight="4"
+            android:weightSum="4">
 
-            <LinearLayout
-                android:orientation="horizontal"
+        <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal|bottom">
+                android:layout_height="0dp"
+                android:layout_weight="4"
+                android:clickable="true"
+                android:layout_gravity="top"
+                android:layout_marginTop="@dimen/vertical_36dp">
 
-<<<<<<< HEAD
+            <EditText
+                    android:id="@+id/username"
+                    android:hint="@string/prompt_username"
+                    android:inputType="textEmailAddress"
+                    style="@style/EditText.Dark" />
+
+            <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/hint"
+                    android:layout_marginBottom="@dimen/keyline_1_minus_8dp" />
+
+            <EditText
+                    android:id="@+id/password"
+                    android:hint="@string/prompt_password"
+                    android:inputType="textPassword"
+                    style="@style/EditText.Dark" />
+
+            <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/hint"
+                    android:layout_marginBottom="@dimen/keyline_1_minus_8dp" />
+
             <Button
-                android:id="@+id/signup_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/signup"
-                style="?android:attr/borderlessButtonStyle"
-                android:textColor="@android:color/white"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />
-=======
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-                    android:textColor="@color/white85"
-                    android:text="@string/forgotton_password" />
-
-                <Button
-                    style="?android:attr/borderlessButtonStyle"
-                    android:id="@+id/reset_password_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/action_reset"
+                    android:id="@+id/login_button"
+                    android:text="@string/login"
+                    style="@style/FlatButton"
                     android:textColor="@android:color/white"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal|bottom"
-                android:paddingBottom="@dimen/activity_vertical_margin">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-                    android:textColor="@color/white85"
-                    android:text="@string/no_account" />
-
-                <Button
-                    android:id="@+id/signup_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/signup"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:textColor="@android:color/white"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />
-
-            </LinearLayout>
-
->>>>>>> development
+                    android:layout_gravity="right" />
         </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom">
 
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|bottom">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+                        android:textColor="@color/white85"
+                        android:text="@string/forgotton_password" />
+
+                <Button
+                        style="?android:attr/borderlessButtonStyle"
+                        android:id="@+id/reset_password_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/action_reset"
+                        android:textColor="@android:color/white"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />
+            </LinearLayout>
+
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|bottom"
+                    android:paddingBottom="@dimen/activity_vertical_margin">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+                        android:textColor="@color/white85"
+                        android:text="@string/no_account" />
+
+                <Button
+                        android:id="@+id/signup_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/signup"
+                        style="?android:attr/borderlessButtonStyle"
+                        android:textColor="@android:color/white"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
