--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,113 +1,101 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    tools:context=".SignUpActivity"
-    tools:ignore="MergeRootFrame"
-    android:layout_height="fill_parent"
-    android:layout_width="fill_parent"
-    android:background="@color/primary">
+             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:fab="http://schemas.android.com/apk/res-auto"
+             tools:context=".SignUpActivity"
+             tools:ignore="MergeRootFrame"
+             android:layout_height="fill_parent"
+             android:layout_width="fill_parent"
+             android:background="@color/primary">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <FrameLayout
-            android:layout_width="256dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/vertical_36dp">
+                android:layout_width="256dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/vertical_36dp">
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:id="@+id/profile_photo"
-                android:src="@drawable/profile_picture_placeholder"
-                android:scaleType="fitCenter"
-                android:layout_gravity="center" />
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:id="@+id/profile_photo"
+                    android:src="@drawable/profile_picture_placeholder"
+                    android:scaleType="fitCenter"
+                    android:layout_gravity="center" />
 
             <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:id="@+id/progress_bar"
-                android:visibility="invisible" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:id="@+id/progress_bar"
+                    android:visibility="invisible" />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/pick_profile_pic_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                fab:fab_icon="@drawable/ic_picture"
-                fab:fab_colorNormal="@color/accent_2"
-                fab:fab_colorPressed="@color/accent_2"
-                android:layout_gravity="bottom|right"
-                android:layout_marginBottom="-8dp" />
+                    android:id="@+id/pick_profile_pic_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    fab:fab_icon="@drawable/ic_picture"
+                    fab:fab_colorNormal="@color/accent_2"
+                    fab:fab_colorPressed="@color/accent_2"
+                    android:layout_gravity="bottom|right"
+                    android:layout_marginBottom="-8dp" />
         </FrameLayout>
 
         <LinearLayout
-            style="@style/LoginFormContainer"
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:paddingTop="@dimen/vertical_36dp">
+                style="@style/LoginFormContainer"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:paddingTop="@dimen/vertical_36dp">
 
             <EditText
-                android:id="@+id/username_edit_text"
-<<<<<<< HEAD
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_username"
-=======
-                android:hint="@string/prompt_email"
->>>>>>> development
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColorHint="@color/hint"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/hint" />
+                    android:id="@+id/username_edit_text"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress"
+                    style="@style/EditText.Dark" />
+
+            <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/hint"
+                    android:layout_marginBottom="@dimen/keyline_1_minus_8dp" />
 
             <EditText
-                android:id="@+id/password_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColorHint="@color/hint"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/hint"
-                android:layout_marginTop="@dimen/login_form_margin" />
+                    android:id="@+id/password_edit_text"
+                    android:hint="@string/prompt_password"
+                    android:inputType="textPassword"
+                    style="@style/EditText.Dark" />
+
+            <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/hint"
+                    android:layout_marginBottom="@dimen/keyline_1_minus_8dp" />
 
             <EditText
-                android:id="@+id/password_again_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password_again"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:imeActionId="@+id/action_signup"
-                android:imeActionLabel="@string/signup"
-                android:imeOptions="actionUnspecified"
-                android:textColorHint="@color/hint"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/hint"
-                android:layout_marginTop="@dimen/login_form_margin" />
+                    android:id="@+id/password_again_edit_text"
+                    android:hint="@string/prompt_password_again"
+                    android:inputType="textPassword"
+                    android:imeActionId="@+id/action_signup"
+                    android:imeActionLabel="@string/signup"
+                    android:imeOptions="actionUnspecified"
+                    style="@style/EditText.Dark" />
+
+            <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/hint"
+                    android:layout_marginBottom="@dimen/keyline_1_minus_8dp" />
 
             <Button
-                android:id="@+id/action_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="@string/signup"
-                style="?android:attr/borderlessButtonStyle"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
-                android:textColor="@android:color/white"
-                android:gravity="center_vertical|center_horizontal"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp" />
+                    android:id="@+id/action_button"
+                    android:text="@string/signup"
+                    android:layout_gravity="end"
+                    style="@style/FlatButton"
+                    android:textColor="@android:color/white" />
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
