--- a/app/src/main/res/layout/fragment_create_new_event.xml
+++ b/app/src/main/res/layout/fragment_create_new_event.xml
@@ -163,22 +163,24 @@
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:orientation="vertical"
                 >
-
-                <Button
-                    android:layout_width="fill_parent"
+                <AutoCompleteTextView
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/vertical_48dp_minus_8dp"
                     android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                     android:id="@+id/event_location_input"
-                    android:textColor="@color/edit_hint"
+                    android:inputType="text"
+                    android:textColor="@color/black_87"
                     android:textSize="@dimen/add_event_fields"
-                    android:textAllCaps="false"
-                    android:gravity="center_vertical|left"
-                    android:text="@string/placeholder_events_item_location"
-                    android:drawableRight="@drawable/ic_down"
+                    android:gravity="bottom|left"
+                    android:hint="@string/placeholder_events_item_location"
+                    android:textColorHint="@color/edit_hint"
                     android:background="#00000000"
-                    android:onClick="onPickButtonClick"
-                    />
-
+                    android:imeOptions="actionDone"
+                    android:focusable="true"
+                    android:clickable="true"
+                    android:editable="true"
+                    android:enabled="true"
+                    android:focusableInTouchMode="true" />
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="1dp"
