--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,12 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
     </style>
 
+    <style name="ActionBarThemeOverlay" parent="">
+        <item name="android:textColorPrimary">#fff</item>
+        <item name="colorControlNormal">@color/accent_2</item>
+        <item name="colorControlHighlight">#3fff</item>
+    </style>
+
     <style name="events_item_text_big">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">24sp</item>
